Release 3.4.6 - TBD

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-2347: Deadlock shutting down zookeeper
  (Rakesh R via rgs)

  ZOOKEEPER-2039. Jute compareBytes incorrect comparison index (Ian Dimayuga via fpj)

  ZOOKEEPER-1901. [JDK8] Sort children for comparison in AsyncOps tests
  (Andrew Purtell via michim)

  ZOOKEEPER-1897. ZK Shell/Cli not processing commands (stack via michim)
  ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
  (Enis Soztutar via phunt)

  ZOOKEEPER-1513. "Unreasonable length" exception while starting a
  server (Skye W-M via phunt)

  ZOOKEEPER-753. log4j dependency in the pom needs to have exclusion
  lists (Sean Busbey via phunt)

  ZOOKEEPER-1553. Findbugs configuration is missing some dependencies
  (Sean Busbey via phunt)

  ZOOKEEPER-1478. Small bug in QuorumTest.testFollowersStartAfterLeader( )
  (Alexander Shraer via fpj, breed, phunt)

  ZOOKEEPER-1578. org.apache.zookeeper.server.quorum.Zab1_0Test failed due to
  hard code with 33556 port. (Li Ping via mahadev)

  ZOOKEEPER-1334. Zookeeper 3.4.x is not OSGi compliant - MANIFEST.MF
  is flawed (Claus Ibsen via phunt)
  
  ZOOKEEPER-1535. ZK Shell/Cli re-executes last command on exit 
  (Edward Ribeiro via camille)

  ZOOKEEPER-1495. ZK client hangs when using a function not available
  on the server. (Skye W-M via phunt)

  ZOOKEEPER-1562. Memory leaks in zoo_multi API
  (Deepak Jagtap via phunt)

  ZOOKEEPER-1645. ZooKeeper OSGi package imports not complete
  (Arnoud Glimmerveen via phunt)

  ZOOKEEPER-1648. Fix WatcherTest in JDK7
  (Thawan Kooburat via phunt)

  ZOOKEEPER-1606. intermittent failures in ZkDatabaseCorruptionTest on
  jenkins (lixiaofeng via phunt)

  ZOOKEEPER-1647. OSGi package import/export changes not applied to
  bin-jar (Arnoud Glimmerveen via phunt)

  ZOOKEEPER-1697.  large snapshots can cause continuous quorum failure
  (phunt via fpj)

  ZOOKEEPER-1629. testTransactionLogCorruption occasionally fails. (shralex via camille)
